<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Are We There Yet kinggra1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy">DummyText</string>
    <string name="provider">Provider:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="newloc">New Location</string>
    <string name="newButton">New</string>
    <string name="eb1230">1230 Engineering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="test_address">Test Address</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>




</resources>
