<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy"
        android:id="@+id/textProvider"
        android:layout_alignParentTop="true"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="10dp"
        android:layout_toRightOf="@+id/textLabelProvider"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/provider"
        android:id="@+id/textLabelProvider"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy"
        android:id="@+id/textLatitude"
        android:layout_below="@+id/textProvider"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/latitude"
        android:id="@+id/textLabelLatitude"
        android:layout_below="@+id/textProvider"
        android:layout_toLeftOf="@+id/textLatitude"
        android:layout_toStartOf="@+id/textLatitude" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy"
        android:id="@+id/textLongitude"
        android:layout_below="@+id/textLatitude"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/longitude"
        android:id="@+id/textLabelLongitude"
        android:layout_below="@+id/textLatitude"
        android:layout_toLeftOf="@+id/textLongitude"
        android:layout_toStartOf="@+id/textLongitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dummy"
        android:id="@+id/textTo"
        android:layout_below="@+id/textLongitude"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dummy"
        android:id="@+id/textDistance"
        android:layout_below="@+id/textTo"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newloc"
        android:id="@+id/textNewLocLabel"
        android:layout_below="@+id/textDistance"
        android:layout_alignEnd="@+id/textDistance"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editLocation"
        android:layout_below="@+id/textNewLocLabel"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newButton"
        android:id="@+id/buttonNewLoc"
        android:layout_below="@+id/editLocation"
        android:layout_alignRight="@+id/editLocation"
        android:layout_alignEnd="@+id/editLocation" />

</RelativeLayout>
